--- a/app/src/main/res/layout/activity_walkthrough.xml
+++ b/app/src/main/res/layout/activity_walkthrough.xml
@@ -23,35 +23,21 @@
             android:id="@+id/RlTexts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/_20sdp">
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/TabWalk"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_8sdp"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/TvWalkContinue"
-                android:layout_alignParentStart="true"
-                android:background="@android:color/transparent"
-                app:tabBackground="@drawable/ic_tab_selector"
-                app:tabGravity="center"
-                app:tabIndicatorHeight="0dp" />
+            android:layout_above="@+id/RlAdViewMain"
+            android:layout_marginBottom="2dp">
 
             <TextView
                 android:id="@+id/TvWalkContinue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentStart="true"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_8sdp"
                 android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_20sdp"
+                android:layout_marginBottom="@dimen/_8sdp"
                 android:background="@drawable/ic_next_button"
                 android:fontFamily="@font/main_semibold"
                 android:gravity="center"
@@ -60,18 +46,33 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/_16sdp" />
 
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/TabWalk"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/TvWalkContinue"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_8sdp"
+                android:background="@android:color/transparent"
+                app:tabBackground="@drawable/ic_tab_selector"
+                app:tabGravity="center"
+                app:tabIndicatorHeight="0dp" />
+
         </RelativeLayout>
         <RelativeLayout
             android:id="@+id/RlAdViewMain"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="55dp"
             android:layout_gravity="bottom|center"
             android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:gravity="bottom|center">
 
             <RelativeLayout
                 android:id="@+id/RlAdView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="55dp"
                 android:layout_marginBottom="0dp"
                 android:gravity="center|bottom" />
